--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
-    "next": "14.1.4",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
