--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^3.0.5",
     "mongoose": "^8.2.2",
     "next": "^14.2.3",
+    "razorpay": "^2.9.5",
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
