--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@azure/communication-email": "^1.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.1",
+    "@mui/x-data-grid": "^7.23.6",
     "@upstash/redis": "^1.32.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
