--- a/.github/workflows/next-deploy.yml
+++ b/.github/workflows/next-deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: "20.16.0"
 
       - name: npm install, build, and test
         run: |
