changed tsconfig file to update alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,9 +22,10 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"],
+      "@/validation/*": ["./src/validation/*"],
+      "@/app/*": ["./src/app/*"],
+      "@/components/*": ["./src/app/components/*"]
     }
   },
   "include": [
